[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["cr0un <vvmanikhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pip = "^23.1.2"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
